--- a/app/Resources/views/backendbase.html.twig
+++ b/app/Resources/views/backendbase.html.twig
@@ -28,7 +28,7 @@
 <script type="text/javascript" src="/source/change/js/main.js"></script>
 {% endblock %}
 </head>
-<body>
+<body style="background-color:#ffffff">
   <div id="adpmain">
     <div>
 <img src="/source/change/img/adplog.png" style="margin-top:20px"/>
