--- a/src/UserBundle/Resources/views/Page/index.html.twig
+++ b/src/UserBundle/Resources/views/Page/index.html.twig
@@ -32,7 +32,7 @@
 
 </head>
 
-<body>
+<body style="background-color:#ffffff">
 
     <div class="container">
       <img src="/source/change/img/adplog.png" style="margin-top:20px"/>
