--- a/src/ArticleBundle/Resources/views/Page/pag.html.twig
+++ b/src/ArticleBundle/Resources/views/Page/pag.html.twig
@@ -1,5 +1,5 @@
 {% extends '::backendbase.html.twig' %}
-{% block title %}MAXMARA PAGE{% endblock %}
+{% block title %}KERING PAGE{% endblock %}
 {% block navpag %}active{% endblock %}
 
 {% block stylesheets %}
