--- a/src/UserBundle/Resources/views/Page/index.html.twig
+++ b/src/UserBundle/Resources/views/Page/index.html.twig
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>MAXMARA Wechat Admin</title>
+    <title>KERING Wechat Admin</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/source/manage/css/bootstrap.min.css" rel="stylesheet">
