--- a/src/Wechat/ApiBundle/Resources/views/Page/groupnews.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Page/groupnews.html.twig
@@ -1,5 +1,5 @@
 {% extends '::backendbase.html.twig' %}
-{% block title %}MAXMARA GROUP NEWS{% endblock %}
+{% block title %}KERING GROUP NEWS{% endblock %}
 {% block navgroupnews %}active{% endblock %}
 
 {% block maincontent %}
