--- a/src/Wechat/ApiBundle/Resources/views/Page/keyword.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Page/keyword.html.twig
@@ -1,5 +1,5 @@
 {% extends '::backendbase.html.twig' %}
-{% block title %}MAXMARA KEYWORD{% endblock %}
+{% block title %}KERING KEYWORD{% endblock %}
 {% block navkeyword %}active{% endblock %}
 
 {% block maincontent %}
