--- a/src/Wechat/ApiBundle/Resources/views/Page/menu.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Page/menu.html.twig
@@ -1,5 +1,5 @@
 {% extends '::backendbase.html.twig' %}
-{% block title %}MAXMARA MENU{% endblock %}
+{% block title %}KERING MENU{% endblock %}
 {% block navmenu %}active{% endblock %}
 
 {% block maincontent %}
