--- a/src/Wechat/ApiBundle/Resources/views/Page/replay.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Page/replay.html.twig
@@ -1,5 +1,5 @@
 {% extends '::backendbase.html.twig' %}
-{% block title %}MAXMARA REPLY{% endblock %}
+{% block title %}KERING REPLY{% endblock %}
 {% block navreplay %}active{% endblock %}
 
 {% block maincontent %}
