--- a/src/Wechat/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
 	<meta name="Keywords" content="">
 	<meta name="Description" content="...">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-	<script type="text/javascript" src="/html/js/jquery.min.js"></script>
+	<script type="text/javascript" src="/change/js/jquery.min.js"></script>
   <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
   <script type="text/javascript" src="/change/js/wxshare.js"></script>
 </head>
