--- a/src/Wechat/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Default/index.html.twig
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="/source/change/js/jquery.min.js"></script>
   <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
   <script type="text/javascript" src="/source/change/js/wxshare.js"></script>
+  <script type="text/javascript" src="/source/change/js/wechatVoice.js"></script>
 </head>
 
 <body>
