add wchat uploadvoice js

--- a/src/Wechat/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Wechat/ApiBundle/Resources/views/Default/index.html.twig
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+  <button id="getvoice">getvoice</button><b>
+  <button id="uploadvoice">uploadvoice</button><b>
+  <p id="mediaid"></p>
   asdasdasdasdasdasdasdasdasdasdsdasdasdsa
 </body>
 </html>
